apps/plugin/ui-src/index.css
@import "tailwindcss";

@source '../../../packages/plugin-ui/**/*.{js,ts,jsx,tsx}';

@custom-variant dark (&:is(.dark *));

html,
body,
#root {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

body {
  margin: 0;
}

:root {
  --radius: 0.5rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.12 0.04 266.7);
  --card: oklch(0.99 0 264);
  --card-foreground: oklch(0.12 0.04 266.7);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.12 0.04 266.7);
  --primary: oklch(0.63 0.25 161.73);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.93 0.01 266.23);
  --secondary-foreground: oklch(0.14 0.01 266.4);
  --muted: oklch(0.97 0.0 266.23);
  --muted-foreground: oklch(0.5 0.01 266.33);
  --accent: oklch(0.93 0.01 266.23);
  --accent-foreground: oklch(0.14 0.01 266.4);
  --destructive: oklch(0.53 0.31 24.65);
  --destructive-foreground: oklch(0.97 0 0);
  --border: oklch(0.89 0.01 266.3);
  --input: oklch(0.89 0.01 266.3);
  --ring: oklch(0.14 0.01 266.4);
  --chart-1: oklch(0.68 0.29 41.48);
  --chart-2: oklch(0.48 0.23 154.44);
  --chart-3: oklch(0.27 0.13 244.46);
  --chart-4: oklch(0.72 0.31 81.39);
  --chart-5: oklch(0.74 0.36 50.3);
}

.dark {
  --background: oklch(0.12 0.04 266.7);
  --foreground: oklch(0.97 0 0);
  --card: oklch(0.237 0 0);
  --card-foreground: oklch(0.97 0 0);
  --popover: oklch(0.12 0.04 266.7);
  --popover-foreground: oklch(0.97 0 0);
  --primary: oklch(0.63 0.25 161.73);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.18 0.01 266.3);
  --secondary-foreground: oklch(0.97 0 0);
  --muted: oklch(0.18 0.01 266.3);
  --muted-foreground: oklch(0.67 0.01 266.38);
  --accent: oklch(0.18 0.01 266.3);
  --accent-foreground: oklch(0.97 0 0);
  --destructive: oklch(0.34 0.24 24.48);
  --destructive-foreground: oklch(0.97 0 0);
  --border: oklch(0.237 0 0);
  --input: oklch(0.18 0.01 266.3);
  --ring: oklch(0.82 0.01 266.4);
  --chart-1: oklch(0.55 0.28 262.73);
  --chart-2: oklch(0.51 0.24 150.67);
  --chart-3: oklch(0.43 0.33 48.41);
  --chart-4: oklch(0.61 0.26 300.96);
  --chart-5: oklch(0.58 0.38 320.79);
}

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --animate-accordion-down: accordion-down 0.2s ease-out;
  --animate-accordion-up: accordion-up 0.2s ease-out;

  @keyframes accordion-down {
    from {
      height: 0;
    }
    to {
      height: var(--radix-accordion-content-height);
    }
  }

  @keyframes accordion-up {
    from {
      height: var(--radix-accordion-content-height);
    }
    to {
      height: 0;
    }
  }
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  /* body {
    @apply bg-background text-foreground;
  } */
  button:not([disabled]),
  [role="button"]:not([disabled]) {
    cursor: pointer;
  }
}

